# ML_Ravet_7th_Oct_2025

./: main.py  pyproject.toml  requirements.txt  test.ipynb
S01_Simple_Linear_Regression/: SLR.ipynb
S02_Multiple_Linear_Regression/: MLR.ipynb
S03_Manual_preprocessing/: model.joblib  ohe.joblib  preprocessing.ipynb  scaler.joblib
S04_Automated_preprocessing/: model.joblib  pipe.ipynb  pre.joblib  res.csv
S05_Feature_Selection/: Backward.ipynb  backward_res.csv  backward_sel.joblib  forward.ipynb  forward_model.joblib  forward_res.csv
S06_Regularization/: Results.csv  pre.joblib  reg.ipynb  ridge_model.joblib  sel.joblib
